# ppk-sirius-2024

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: api.py  app.py  core.py
src/domains/find_clothes/: api.py  core.py
static/css/: styles.css
templates/: base.jinja  clothes.jinja  result_not_ready.jinja  result_ok.jinja  start.jinja
